Use DkCoder bytecode compilation (1/n)
Removes the need for WSL2.

This commit lets SonicScoutBackend complete the CMake configure phase.

+ Set CMake variable DKSDK_GENERATOR to DKCODER in presets and in SonicScout_Setup
+ No more `LANGUAGES ASM OCamlDune` required for project(...)
+ Add --android-native-ocaml option to select the older nativecode OCaml compilation (DKSDK_GENERATOR=DUNE). WSL2 is not installed unless the option is enabled.
+ Use CMAKE_CROSSCOMPILING rather than CMAKE_OCamlDune_TARGET_IS_COMPATIBLE_HOST_ABI when OCamlDune not enabled.
+ Do not create CMake targets that require OCamlDune to compile OCaml code when DkCoder is compiling the same OCaml code (ie. DKSDK_GENERATOR=DKCODER).
+ Add SONIC_SCOUT_FEATURE_* variables that are disabled by default (for now) so that the SonicScoutBackend CMake configure phase can complete during the transition to DkCoder bytecode compilation: SONIC_SCOUT_FEATURE_CLI, SONIC_SCOUT_FEATURE_SCANNER, SONIC_SCOUT_FEATURE_COM
+ Replace SONIC_SCOUT_BACKEND_FEATURES list property with the individual
  SONIC_SCOUT_FEATURE_* properties

--- a/us/SonicScoutBackend/CMakeLists.txt
+++ b/us/SonicScoutBackend/CMakeLists.txt
@@ -22,15 +22,17 @@ set(DKSDK_DUNE_LOCK_TIMEOUT_SECS 480 CACHE STRING "" FORCE)
 
 #   Define the project
 #       * The VERSION is the version of your application
-#       * The "OCamlDune" language is used to build OCaml source code into
-#         executables and libraries using Dune.
-#           You'll want to use at least the C language so that you can
+#       * (removed) The "OCamlDune" language is used to build OCaml source code into
+#         executables and libraries using Dune. In the Future a "DkCoder" language
+#         may do the same thing but using DkCoder.
+#           For OCamlDune, you'll want to use at least the C language so that you can
 #           link the native code executables.
-#       * OCaml requires the C and a compatible ASM language. ASM should be
-#         listed last per best practices
+#       * OCamlDune requires the C and a compatible ASM language (ie.
+#         ${dksdk-cmake_LANG_ASM}). ASM should be listed last per best practices
+#       * C and CXX is required to build Cap n' Proto
 #       * You do not need CXX (C++) compiler unless you bring in your own
 #         C++ code or dependencies
-project(SonicScout VERSION 1.0.0 LANGUAGES C CXX OCamlDune ${dksdk-cmake_LANG_ASM})
+project(SonicScout VERSION 1.0.0 LANGUAGES C CXX)
 
 # Project wide setup
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
@@ -60,7 +62,6 @@ DkSDKProject_AddProject(
 add_subdirectory(dependencies)
 
 # Main targets built by this project
-set(SONIC_SCOUT_BACKEND_FEATURES "Objs;CLI;ManagerApp" CACHE STRING "Semicolon separated list of features to build: Objs, CLI, ManagerApp")
 add_subdirectory(src)
 
 # Typically needed only if we are the top level project
