--- a/us/SonicScoutBackend/src/SonicScout_Objs/CMakeLists.txt
+++ b/us/SonicScoutBackend/src/SonicScout_Objs/CMakeLists.txt
@@ -5,17 +5,19 @@ DkSDKProject_AddPackage(
         [[SquirrelScout_Objs expose a register function to register the COM class and instance objects.]]
 )
 
-add_library(SquirrelScout_Objs OBJECT
-        ObjsEntry.ml
-        # Since this is a library id, will be ignored by DkCoder
-        DkCoder_Std.ml)
-target_sources(SquirrelScout_Objs INTERFACE ObjsEntry.mli)
-add_library(SquirrelScout::Objs ALIAS SquirrelScout_Objs)
-set_target_properties(SquirrelScout_Objs PROPERTIES EXPORT_NAME Objs)
-target_link_libraries(SquirrelScout_Objs PRIVATE
-        # We want the library that we wrote in ../Std/
-        # to be available to the node's .ml code.
-        SquirrelScout_Std
+if(NOT DKSDK_GENERATOR STREQUAL DKCODER) # DkCoder compiles OCaml itself
+        add_library(SquirrelScout_Objs OBJECT
+                ObjsEntry.ml
+                # Since this is a library id, will be ignored by DkCoder
+                DkCoder_Std.ml)
+        target_sources(SquirrelScout_Objs INTERFACE ObjsEntry.mli)
+        add_library(SquirrelScout::Objs ALIAS SquirrelScout_Objs)
+        set_target_properties(SquirrelScout_Objs PROPERTIES EXPORT_NAME Objs)
+        target_link_libraries(SquirrelScout_Objs PRIVATE
+                # We want the library that we wrote in ../Std/
+                # to be available to the node's .ml code.
+                SquirrelScout_Std
 
-        # DkSDK::FFI::OCaml
-        Findlib::DkSDKFFI_OCaml)
+                # DkSDK::FFI::OCaml
+                Findlib::DkSDKFFI_OCaml)
+endif()
