--- a/us/SonicScoutBackend/src/SonicScout_ObjsLib/CMakeLists.txt
+++ b/us/SonicScoutBackend/src/SonicScout_ObjsLib/CMakeLists.txt
@@ -4,9 +4,12 @@ DkSDKProject_AddPackage(
         SUMMARY_PARAGRAPHS
         [[SquirrelScout_ObjsLib registers the COM class and instance objects.]]
 )
+option(SONIC_SCOUT_FEATURE_COM "Enable the COM library that runs the Sonic Scout backend inside Android/iOS")
 
-# This is the STATIC library that will link to Android/iOS applications.
-add_library(SquirrelScout_ObjsLib STATIC SquirrelScout_ObjsLib.ml Init.ml)
-add_library(SquirrelScout::ObjsLib ALIAS SquirrelScout_ObjsLib)
-target_link_libraries(SquirrelScout_ObjsLib PRIVATE SquirrelScout_Objs)
-target_include_directories(SquirrelScout_ObjsLib INTERFACE DkSDK::OCamlCompile)
+if(SONIC_SCOUT_FEATURE_COM)
+        # This is the STATIC library that will link to Android/iOS applications.
+        add_library(SquirrelScout_ObjsLib STATIC SquirrelScout_ObjsLib.ml Init.ml)
+        add_library(SquirrelScout::ObjsLib ALIAS SquirrelScout_ObjsLib)
+        target_link_libraries(SquirrelScout_ObjsLib PRIVATE SquirrelScout_Objs)
+        target_include_directories(SquirrelScout_ObjsLib INTERFACE DkSDK::OCamlCompile)
+endif()
