Use DkCoder bytecode compilation (5/n)
Removes the need for WSL2.

This commit transitions the Android app to DkCoder.

+ Remove fetched dependencies not needed by DkCoder compilation
+ Centralize dependencies into Dependences.ml and a single scoutapps/fetch/ folder
+ Set FETCHCONTENT_SOURCE_DIR_ in ScoutBackend to scoutapps/fetch/
+ Default SONIC_SCOUT_FEATURE_COM is now ON.
+ WSL2 has been removed. No Clean.ml --dksdk-wsl2, no defining and no running of :dkconfig:dksdkCmakeNdkEmulator target, no --android-native-ocaml option, no cmakeEmulatorpath configuration in Gradle
+ Remove OCamlDune from project(LANGUAGES)
+ Remove DKSDK_GENERATOR cache variable
+ Remove using DKSDK_CMAKE_LANG_ASM global property that was
    only used for OCamlDune
+ Remove _all_cmake.dune
+ Use setup.properties to communicate configuration from scoutapps into SonicScoutAndroid. The FETCHCONTENT_SOURCE_DIR_* are from scoutapps; no dksdk.project.get is needed in SonicScoutAndroid. CMAKE_MAKE_PROGRAM is scoutapps' Ninja installation (newly moved to scoutapps from SonicScoutAndroid).
+ Put JDK and Android Studio installation in scoutapps since scoutapps/fetch/dksdk-ffi-java Gradle plugins look for JDK and JDK8 in grandparent directory
+ Place paths required to run Gradle (JDK, Android SDK, Gradle Home, Ninja, CMake) in Slots so they can easily be moved around (like in this commit) or set in command line options
+ Move creation of CMake and Ninja into CMakeNinja.ml
+ Move finding of Android Studio executable to Slots
+ Remove the ~no_local_properties:() flag from RunGradle and expect caller to do RunGradle.generate_local_properties if it is needed
+ Use modern (simpler) SonicScoutAndroid dependencies/ for dksdk-ffi-c and dksdk-ffi-java.
+ Remove Ninja generator from SonicScoutAndroid windows_x86[_64] presets so that Android Studio does not have to open in a vsdev environment. Instead the Visual Studio 2019 (etc.) generators can be used
+ Supply SonicScoutBackend_SOURCE_DIR to SonicScoutAndroid 

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /#s/
 /dune-project
 /dune-workspace
+/.z-dk/
 /.z-dk-dune-project
 /.merlin
 
@@ -13,6 +14,9 @@ build_dev/
 
 # SonicScout_Setup.Qt
 msvc2019_64/
+
+# SonicScout_Setup.Dependencies
+/fetch/
 
 # vim
 *.swp
