--- a/us/SonicScoutAndroid/gradle.properties
+++ b/us/SonicScoutAndroid/gradle.properties
@@ -22,4 +22,5 @@ android.nonTransitiveRClass=true
 
 # Add DkSDK installed JDK to the list of JDKs that are searched.
 # That JDK is from: ./dk dksdk.java.jdk.download NO_SYSTEM_PATH
-org.gradle.java.installations.paths=.ci/local/share/jdk
+# Use ../../ when this is the subproject scoutapps/us/SonicScoutAndroid.
+org.gradle.java.installations.paths=.ci/local/share/jdk,../../.ci/local/share/jdk
