--- a/us/SonicScoutAndroid/.gitignore
+++ b/us/SonicScoutAndroid/.gitignore
@@ -8,7 +8,6 @@
 
 *.iml
 .gradle
-/local.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -24,12 +23,12 @@
 .cxx/
 local.properties
 
-# ./dk dksdk.project.get
-/.z-dk/
-
 # ./dk
 /.z-dk/
 /.ci/
+
+# scoutapps
+/setup.properties
 
 # Android Studio
 /.settings/org.eclipse.buildship.core.prefs
