--- a/us/SonicScoutAndroid/dkconfig/build.gradle
+++ b/us/SonicScoutAndroid/dkconfig/build.gradle
@@ -1,5 +1,7 @@
+/* This module does nothing for now. Keep it for any tasks needed exclusively
+   for DkCoder. */
+
 import com.diskuv.dksdk.core.gradle.plugins.CMakeNdkEnvironmentPlugin
-import com.diskuv.dksdk.core.gradle.tasks.DkSDKCmakeNdkEmulator
 
 buildscript {
     dependencies {
@@ -15,28 +17,3 @@ plugins {
     id 'java' // Needed for buildscript/dependencies/classpath
 }
 apply plugin: CMakeNdkEnvironmentPlugin
-
-configurations {
-    cmakeEmulatorFiles {
-        canBeResolved = false
-        canBeConsumed = true
-    }
-}
-
-tasks.register('dksdkCmakeNdkEmulator', DkSDKCmakeNdkEmulator) {
-    cmakeEmulatorJsonFile = layout.buildDirectory.file("emulators/cmake-ndk.json")
-    /* Do download during configuration phase since android.externalNativeBuild.cmake
-    * expects the cmake directory to be present. */
-    download()
-}
-clean {
-    /* Extend the [clean] task to delete the JSON file created during configuration phase
-     * (which is not visible to Gradle). */
-    delete dksdkCmakeNdkEmulator.cmakeEmulatorJsonFile
-}
-
-artifacts {
-    cmakeEmulatorFiles(dksdkCmakeNdkEmulator.cmakeEmulatorJsonFile) {
-        builtBy dksdkCmakeNdkEmulator
-    }
-}
