--- a/us/SonicScoutBackend/dependencies/CMakeLists.txt
+++ b/us/SonicScoutBackend/dependencies/CMakeLists.txt
@@ -24,6 +24,7 @@ get_property(dksdk-ffi-c_REPOSITORY GLOBAL PROPERTY DKSDK_FFI_C_REPOSITORY)
 # --- Fetch dksdk-ffi-c
 
 DkSDKFetchContent_DeclareSecondParty(NAME dksdk-ffi-c
+    ALLOW_OUTSIDE_SOURCE_TREE
     GIT_REPOSITORY "${dksdk-ffi-c_REPOSITORY}"
     GIT_TAG main)
 # MSVC Fatal error: Unsupported relocation kind 0003 for __GSHandlerCheck in _deps\dksdk-ffi-c-build\src\dksdk_ffi_c-StaticExports.lib(_deps\dksdk-ffi-c-build\src\CMakeFiles\dksdk_ffi_c-StaticExports.dir\sha256.c.obj)
