--- a/us/SonicScoutBackend/src/SonicScout_Objs/CMakeLists.txt
+++ b/us/SonicScoutBackend/src/SonicScout_Objs/CMakeLists.txt
@@ -5,7 +5,7 @@ DkSDKProject_AddPackage(
         [[SquirrelScout_Objs expose a register function to register the COM class and instance objects.]]
 )
 
-if(NOT DKSDK_GENERATOR STREQUAL DKCODER) # DkCoder compiles OCaml itself
+if(SONIC_SCOUT_FEATURE_COM)
         add_library(SquirrelScout_Objs OBJECT
                 ObjsEntry.ml
                 # Since this is a library id, will be ignored by DkCoder
